--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,12 @@ asgiref==3.9.1
 certifi==2025.8.3
 charset-normalizer==3.4.2
 Django==5.2.4
+django-stubs==5.2.2
+django-stubs-ext==5.2.2
 idna==3.10
 requests==2.32.4
 sqlparse==0.5.3
 tmdbsimple==2.9.1
+types-PyYAML==6.0.12.20250516
+typing_extensions==4.14.1
 urllib3==2.5.0
